; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_dma-iommu.c_cookie_msi_granule.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_dma-iommu.c_cookie_msi_granule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_dma_cookie = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@IOMMU_DMA_IOVA_COOKIE = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.iommu_dma_cookie*)* @cookie_msi_granule to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cookie_msi_granule(%struct.iommu_dma_cookie* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.iommu_dma_cookie*, align 8
  store %struct.iommu_dma_cookie* %0, %struct.iommu_dma_cookie** %3, align 8
  %4 = load %struct.iommu_dma_cookie*, %struct.iommu_dma_cookie** %3, align 8
  %5 = getelementptr inbounds %struct.iommu_dma_cookie, %struct.iommu_dma_cookie* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @IOMMU_DMA_IOVA_COOKIE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.iommu_dma_cookie*, %struct.iommu_dma_cookie** %3, align 8
  %11 = getelementptr inbounds %struct.iommu_dma_cookie, %struct.iommu_dma_cookie* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %2, align 8
  br label %16

14:                                               ; preds = %1
  %15 = load i64, i64* @PAGE_SIZE, align 8
  store i64 %15, i64* %2, align 8
  br label %16

16:                                               ; preds = %14, %9
  %17 = load i64, i64* %2, align 8
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
